backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: remote123/whiteboxlearning:serverrr
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP # Changed to ClusterIP for Ingress to manage external access
