front-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbl-frontend-local-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wbl-frontend-local
  template:
    metadata:
      labels:
        app: wbl-frontend-local
    spec:
      containers:
      - name: wbl-frontend-local
        image: whiteboxlearning:local1  # Use a local image for development
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"      # Minimum CPU requested for local development
            memory: "128Mi"  # Minimum memory requested for local development
          limits:
            cpu: "300m"      # Max CPU usage for local development
            memory: "256Mi"  # Max memory usage for local development
---
apiVersion: v1
kind: Service
metadata:
  name: wbl-frontend-local-service
spec:
  type: NodePort  # Change to NodePort for local access
  selector:
    app: wbl-frontend-local
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30001  # Optional: specify a node port for easier access
