frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbl-frontend-new-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wbl-frontend-new
  template:
    metadata:
      labels:
        app: wbl-frontend-new
    spec:
      containers:
      - name: wbl-frontend-new
        image: remote123/whiteboxlearning:whiteboxxx-frontenddd
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"      # Minimum CPU requested
            memory: "256Mi"  # Minimum memory requested
          limits:
            cpu: "500m"      # Max CPU usage
            memory: "512Mi"  # Max memory usage
---

apiVersion: v1
kind: Service
metadata:
  name: wbl-frontend-new-service
spec:
  type: ClusterIP  # ClusterIP is correct for internal services with Ingress handling external access
  selector:
    app: wbl-frontend-new
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
