resume-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wbl-resume-backend-deployment
  labels:
    app: wbl-resume-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wbl-resume-backend
  template:
    metadata:
      labels:
        app: wbl-resume-backend
    spec:
      containers:
        - name: wbl-resume-backend
          image: remote123/whiteboxlearning:backenddd-serveeer
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "200m"      # Minimum CPU requested
              memory: "256Mi"  # Minimum memory requested
            limits:
              cpu: "500m"      # Max CPU usage
              memory: "512Mi"  # Max memory usage
---
apiVersion: v1
kind: Service
metadata:
  name: wbl-resume-backend-service
spec:
  selector:
    app: wbl-resume-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
