Wblingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wbl-ingress
  # namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-set-headers: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whitebox-learning.com
        - www.whitebox-learning.com
      secretName: whitebox-tls
  rules:
    - host: whitebox-learning.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: wbl-frontend-new-service # Directing auth to the frontend service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          # - path: /api/node # Route for resume-backend
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: wbl-resume-backend-service # Make sure this matches the service name in resume-backend.yml
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wbl-frontend-new-service
                port:
                  number: 80
          # - path: /admin
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: admin-frontend-service
          #       port:
          #         number: 80
          # - path: /api/admin
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: admin-backendd-service
          #       port:
          #         number: 80
    - host: www.whitebox-learning.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: wbl-frontend-new-service # Directing auth to the frontend service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          # - path: /api/node # Route for resume-backend
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: wbl-resume-backend-service # Make sure this matches the service name in resume-backend.yml
          #       port:
          #         number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wbl-frontend-new-service
                port:
                  number: 80 
          # - path: /admin
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: admin-frontend-service
          #       port:
          #         number: 80
          # - path: /api/admin
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: admin-backendd-service
          #       port:
          #         number: 80
